<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanResultActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/uidDataView">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="16dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/profileImageView"
                android:layout_gravity="center|top"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom|center"
                android:elevation="50dp"
                android:background="#FFFFFF"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/digSignImage"
                    android:layout_gravity="bottom"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verifyProgress"
                    android:id="@+id/verifyProgressView"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:fontFamily="sans-serif"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="5dp"
                    android:paddingTop="5dp"
                    android:layout_gravity="top"
                    />
            </LinearLayout>
        </FrameLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_tag"
                android:layout_gravity="start"
                android:id="@+id/textViewNameTag"
                style="@style/fontStyleDemoData"
                android:minWidth="80dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/textViewName"
                style="@style/fontStyleDemoData"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender_tag"
                android:layout_gravity="start"
                android:id="@+id/textViewGenderTag"
                style="@style/fontStyleDemoData"
                android:minWidth="80dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/textViewGender"
                style="@style/fontStyleDemoData"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dob_tag"
                android:layout_gravity="start"
                android:id="@+id/textViewDobTag"
                style="@style/fontStyleDemoData"
                android:minWidth="80dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/textViewDob"
                style="@style/fontStyleDemoData"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aadhaar_tag"
                android:layout_gravity="start"
                android:id="@+id/textViewAadhaarTag"
                style="@style/fontStyleDemoData"
                android:minWidth="80dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/textViewUid"
                style="@style/fontStyleDemoData"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_tag"
                android:gravity="center"
                android:id="@+id/textAddressTag"
                android:textAlignment="center"
                style="@style/fontStyleDemoData"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewAddress"
                android:textAlignment="center"
                android:gravity="center"
                style="@style/fontStyleDemoData"
                />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="Scan Again"
            android:layout_gravity="center"
            android:id="@+id/scanRepeatButton"
            android:layout_marginBottom="8dp"
            android:background="#39FF14"/>
    </LinearLayout>
</ScrollView>

