<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/uidDataView"
        android:paddingRight="16dp"
        android:paddingLeft="16dp">
        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:id="@+id/profileImageView"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_tag"
                android:layout_gravity="center"
                android:id="@+id/textViewNameTag"
                style="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="sans-serif"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/textViewName"
                style="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="sans-serif"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dob_tag"
                android:layout_gravity="center"
                android:id="@+id/textViewDobTag"
                style="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="sans-serif"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/textViewDob"
                style="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="sans-serif"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_tag"
                android:gravity="center"
                android:id="@+id/textAddressTag"
                android:textAlignment="center"
                style="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="sans-serif"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewAddress"
                android:textAlignment="center"
                android:gravity="center"
                style="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="sans-serif"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender_tag"
                android:layout_gravity="center"
                android:id="@+id/textViewGenderTag"
                style="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="sans-serif"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/textViewGender"
                style="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="sans-serif"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aadhaar_tag"
                android:layout_gravity="center"
                android:id="@+id/textViewAadhaarTag"
                style="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="sans-serif"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/textViewUid"
                style="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="sans-serif"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get Extras"
                android:layout_gravity="center"
                android:layout_marginRight="40dp"
                android:id="@+id/showExtraButton"
                android:layout_marginBottom="8dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Scan Again"
                android:layout_gravity="center"
                android:id="@+id/scanRepeatButton"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verifyProgress"
                android:id="@+id/verifyProgressView"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:paddingTop="15dp"/>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/verifyProgress"
                    android:visibility="gone"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/digSignImage"
                    android:visibility="gone"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

